Fixed site height and Hover on mobile

--- a/components/Answer/Answer.module.scss
+++ b/components/Answer/Answer.module.scss
@@ -1,10 +1,13 @@
 .answer {
   transition: 200ms;
-  &:hover {
-    cursor: pointer;
-    transform: scale(1.025);
 
-    box-shadow: 2px 2px 10px rgba($color: #ffffff, $alpha: 0.5);
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.025);
+
+      box-shadow: 2px 2px 10px rgba($color: #ffffff, $alpha: 0.5);
+    }
   }
 }
 
