--- a/components/Layout/Header.module.scss
+++ b/components/Layout/Header.module.scss
@@ -4,6 +4,7 @@
   grid-template-columns: 1fr auto 1fr;
   padding: 0 10px;
   --top-padding: 10px;
+  height: 70px;
   .menuwrap {
     position: relative;
     display: flex;
