--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -2,4 +2,13 @@
   -webkit-transition: background-image 0.2s ease-in-out;
   transition: background-image 0.2s ease-in-out;
   position: relative;
+  // min-height: 100vh;
+  // height: 100vh;
+}
+
+.main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
