--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,6 +42,7 @@ $lightBackground: linear-gradient(
   --white: #fff;
   --black: #222;
   --logoFont: 'Amaranth', sans-serif;
+  --header-height: 70px;
 }
 
 .light {
@@ -68,11 +69,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
 }
 
 h1 {
   font-family: 'Courier New', Courier, monospace;
   font-family: 'Amaranth', sans-serif;
+}
+
+#__next {
+  min-height: 100vh;
 }
 
 a {
@@ -86,14 +92,4 @@ a {
 
 .container {
   padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  // padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  // justify-content: space-around;
-  align-items: center;
 }
